.provarCaches/00D410000011HE0EAM/objects/rstk__solsched__c.object
<CustomObject>
    <description>solsched__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__solsched_actshipdate__c</fullName>
        <description>When this delivery line is shipped, the date of the shipment is recorded here by the system (cannot be modified by the user). (PG)</description>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Actual Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__solsched_qty__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The quantity that is to be shipped on this delivery line.  The sum of all delivery lines must equal the order line total. (PG)</description>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Quantity</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__solsched_seq__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sequence Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>rstk__solsched_shipdate__c</fullName>
        <description>The anticipated shipment date for this portion of the order line. (PG)</description>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__solsched_shipper__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>When this delivery line is shipped, this field will be set by the system to the Shipper Number to which it belongs (cannot be modified by the user). (PG)</description>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Shipper</label>
        <referenceTo>rstk__soship__c</referenceTo>
        <relationshipLabel>Sales Order Line Fulfillment Schedule</relationshipLabel>
        <relationshipName>solscheds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__solsched_shiptoaddr__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>A given delivery line can be designated to ship to any of the existing ship-to addresses that exist for the customer on the order. (PG)</description>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Ship To Address</label>
        <referenceTo>rstk__socaddr__c</referenceTo>
        <relationshipLabel>Sales Order Line Fulfillment Schedule</relationshipLabel>
        <relationshipName>solscheds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__solsched_soline__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Soline</label>
        <referenceTo>rstk__soline__c</referenceTo>
        <relationshipName>solscheds</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Sales Order Line Fulfillment Schedule</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Order Line Fulfillment Schedule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>